fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,16 @@ a:hover {
 	width: 45%;
 }
 
+.left_side60 {
+	float: left;
+	width: 55%;
+}
+
+.right_side35 {
+	float: right;
+	width: 35%;
+}
+
 .right_side60 {
 	float: right;
 	width: 60%;
